Fixed overlapping image in resource card & fixed size of kpi card section

--- a/app/assets/stylesheets/components/_box-resource.scss
+++ b/app/assets/stylesheets/components/_box-resource.scss
@@ -4,7 +4,8 @@
 }
 
 .resource-image{
-  width: 150px;
+  max-width: 150px;
+  width: 100%;
   height: 100%;
   object-fit: cover;
   border-top-left-radius : 10px;
